# ReformulatEE

./: .env.example  .gitattributes  .gitignore  Análise Intel Arc 130T.txt  CHANGELOG.md  COMO_USAR.md  CONTRIBUTING.md  LICENSE  LLM_Quest_v3_patches.md  README.md  README.pt.md  Source.txt  app.py  classify_divergent.py  fetch_all_candidates.ps1  inspect_results.py  llm_quest_interface.ipynb  pyproject.toml  requirements.txt  setup_env.ps1  smoke_test.py  verify_env.py
.claude/: launch.json  settings.local.json
.github/workflows/: lint.yml  test.yml
data/calibration/: best_config.json  grid_results.jsonl  scores_cache.jsonl
data/corpus/: bm25_index.pkl  papers.jsonl
data/pairs/: adversarial_probes.jsonl  adversarial_probes_crossdomain.jsonl  arxiv_candidates.jsonl  extracted_pairs.jsonl  layer3_decisoes_humanas.jsonl  nobel_candidates.jsonl  pairs_layer1.jsonl  pairs_layer2.jsonl  pairs_layer2_divergent.jsonl  pubmed_candidates.jsonl  s2_candidates.jsonl  sep_candidates.jsonl
data/results/: fase0_completo.json  fase0_sem_api.json  fase0_v2_sem_api.json
data/rl/: batch_domains.jsonl  batch_large.jsonl  batch_pairs.jsonl  dpo_dataset.jsonl  dpo_final.jsonl  dpo_tier1.jsonl  dpo_tier2.jsonl  dpo_tier3.jsonl
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md
notebooks/: dpo_finetune_colab.ipynb
src/classifier/: paradigm_classifier.py  tractability_local.py  train.py  train_tractability.py
src/corpus/: build_semantic_index.py  fetch.py  index.py
src/dataset/: annotate_layer2.py  augment_cross_domain.py  expand_domains.py  expand_large.py  expand_via_batch.py  extract_pairs.py  fetch_arxiv_pairs.py  fetch_nobel_pairs.py  fetch_pubmed_pairs.py  fetch_semantic_scholar_pairs.py  fetch_sep_pairs.py  generate_adversarial_probes.py  merge.py  prepare_dpo.py
src/db/: hf_logger.py  historico.py
src/ee/: calibrate_betas.py  nao_trivialidade.py  respondibilidade.py  reward.py  translate_local.py  tratabilidade.py
src/eval/: curated.py  evaluate.py
src/rl/: build_dpo_dataset.py  generate_free.py  inference.py  train_dpo.py
tests/: __init__.py  test_reward.py
