[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reformulatee"
version = "1.0.0"
description = "Reformulate research questions with maximum epistemic effectiveness via LLM fine-tuning"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "fmr34", email = "https://github.com/fmr34"}
]
keywords = [
    "nlp",
    "research-questions",
    "epistemic-effectiveness",
    "dpo",
    "fine-tuning",
    "rlhf",
    "huggingface",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.7.0",
    "rank-bm25>=0.2.0",
    "numpy>=1.21.0",
    "datasets>=2.10.0",
    "huggingface-hub>=0.16.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.9.0",
]

[project.optional-dependencies]
inference = [
    "llama-cpp-python>=0.2.0",
]
training = [
    "trl>=0.11.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.34.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/fmr34/reformulatee"
Repository = "https://github.com/fmr34/reformulatee.git"
Documentation = "https://github.com/fmr34/reformulatee#-documentation"
Issues = "https://github.com/fmr34/reformulatee/issues"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # diretórios
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I"]
ignore = ["E501"]  # line too long (black handles this)
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "data",
    "notebooks",
]

[tool.ruff.isort]
known-first-party = ["src"]
force-single-line = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["build/", "dist/", ".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
